--- a/scss/partials/_bootstrap_override.scss
+++ b/scss/partials/_bootstrap_override.scss
@@ -11,7 +11,15 @@ $dark: #141414;
 @import "../../bootstrap/scss/variables-dark";
 
 // 4. Include any default map overrides here
+$newSpacers: (
+  6: $spacer * 3.5,
+  7: $spacer * 4,
+  8: $spacer * 4.5,
+  9: $spacer * 5,
+  10: $spacer * 6,
+) !default;
 
+$spacers: map-merge($spacers, $newSpacers);
 // 5. Include remainder of required parts
 @import "../../bootstrap/scss/maps";
 @import "../../bootstrap/scss/mixins";
@@ -25,6 +33,7 @@ $dark: #141414;
 @import "../../bootstrap/scss/containers";
 @import "../../bootstrap/scss/grid";
 @import "../../bootstrap/scss/buttons";
+@import "../../bootstrap/scss/transitions";
 @import "../../bootstrap/scss/dropdown";
 @import "../../bootstrap/scss/button-group";
 @import "../../bootstrap/scss/nav";
@@ -36,3 +45,15 @@ $dark: #141414;
 @import "../../bootstrap/scss/utilities/api";
 
 // 8. Add additional custom code here
+header {
+  nav {
+    .active {
+      color: white !important;
+    }
+  }
+}
+
+.nav-link:hover {
+  color: rgb(210, 210, 210) !important;
+  transform: scale(110%);
+}
