--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,2 +1,28 @@
 @import "./partials/reset";
 @import "./partials/bootstrap_override";
+
+header {
+  nav {
+    .logo {
+      width: 120px;
+      img {
+        width: 100%;
+      }
+    }
+    .user {
+      width: 40px;
+      img {
+        width: 100%;
+      }
+    }
+  }
+}
+
+.dropdown-menu {
+  box-sizing: content-box;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.btn:focus {
+  border: none;
+}
