--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,11 +18,24 @@ header {
   }
 }
 
-.dropdown-menu {
-  box-sizing: content-box;
-  background-color: rgba(0, 0, 0, 0.7);
-}
-
 .btn:focus {
   border: none;
+}
+
+.sorter {
+  i {
+    border-color: gray !important;
+    color: gray !important;
+    cursor: pointer;
+    &:hover {
+      color: rgb(210, 210, 210) !important;
+      border-color: rgb(210, 210, 210) !important;
+      font-size: 1.15em;
+    }
+  }
+  .active {
+    color: white !important;
+    border-color: white !important;
+    font-size: 1.1em;
+  }
 }
