--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10633,11 +10633,61 @@ header nav .user img {
   overflow: visible;
 }
 
-.col-2 {
+main .col-2 {
   transition: transform 0.3s;
 }
-.col-2:hover {
+main .col-2:hover {
   transform: scale(120%);
   cursor: pointer;
   z-index: 2;
+}
+
+footer {
+  font-size: 0.75em;
+}
+footer i {
+  font-size: 1.5em;
+}
+@media screen and (min-width: 768px) {
+  footer i {
+    font-size: 2em;
+  }
+}
+footer .border {
+  width: 90px;
+}
+footer p {
+  font-size: 0.75em;
+}
+
+footer ul {
+  list-style-type: none;
+}
+
+.footer {
+  width: 90%;
+}
+@media screen and (min-width: 768px) {
+  .footer {
+    width: 70%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .footer {
+    width: 60%;
+  }
+}
+
+.social {
+  max-width: 100px;
+}
+@media screen and (min-width: 768px) {
+  .social {
+    max-width: 150px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .social {
+    max-width: 200px;
+  }
 }/*# sourceMappingURL=style.css.map */
