--- a/scss/style.scss
+++ b/scss/style.scss
@@ -44,11 +44,53 @@ header {
   overflow: visible;
 }
 
-.col-2 {
-  transition: transform 0.3s;
-  &:hover {
-    transform: scale(120%);
-    cursor: pointer;
-    z-index: 2;
+main {
+  .col-2 {
+    transition: transform 0.3s;
+    &:hover {
+      transform: scale(120%);
+      cursor: pointer;
+      z-index: 2;
+    }
+  }
+}
+
+footer {
+  font-size: 0.75em;
+  i {
+    font-size: 1.5em;
+    @media screen and (min-width: 768px) {
+      font-size: 2em;
+    }
+  }
+  .border {
+    width: 90px;
+  }
+  p {
+    font-size: 0.75em;
+  }
+}
+
+footer ul {
+  list-style-type: none;
+}
+
+.footer {
+  width: 90%;
+  @media screen and (min-width: 768px) {
+    width: 70%;
+  }
+  @media screen and (min-width: 992px) {
+    width: 60%;
+  }
+}
+
+.social {
+  max-width: 100px;
+  @media screen and (min-width: 768px) {
+    max-width: 150px;
+  }
+  @media screen and (min-width: 992px) {
+    max-width: 200px;
   }
 }
