--- a/scss/style_user.scss
+++ b/scss/style_user.scss
@@ -46,3 +46,27 @@ h1 {
 img {
   width: 200px;
 }
+
+.form-check-input {
+  appearance: none;
+  width: 1.5em;
+  height: 1.5em;
+  border: 0.1em solid $secondary;
+  background-color: transparent;
+  top: 5px;
+  position: relative;
+  cursor: pointer;
+}
+
+.form-check-input:checked::before {
+  content: "✔";
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black; /* Non so perché non cambia colore */
+  font-size: 1rem;
+  font-weight: bold;
+  position: absolute;
+  bottom: 2px;
+  left: 0;
+}
